// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SignUp /> renders SignUp page 1`] = `
<div
  class="header__Background-sc-1qf3jwc-0 dEAuVS"
>
  <div
    class="header__Container-sc-1qf3jwc-1 iJrjfW"
  >
    <img
      alt="Netflix"
      class="header__Logo-sc-1qf3jwc-2 edGsUc"
      src="/images/misc/logo.svg"
    />
  </div>
  <div
    class="form__Container-sc-1e02ltb-0 dTbbCb"
  >
    <h1
      class="form__Title-sc-1e02ltb-2 kkeSEH"
    >
      Sign In
    </h1>
    <form
      class="form__Base-sc-1e02ltb-1 NkBbX"
    >
      
      <input
        class="form__Input-sc-1e02ltb-3 gqlhzz"
        id="name"
        placeholder="Name"
        type="text"
        value="Bob"
      />
      <input
        class="form__Input-sc-1e02ltb-3 gqlhzz"
        id="email"
        placeholder="Email or phone number"
        type="text"
        value="gggrres@fffg.cc"
      />
      <input
        class="form__Input-sc-1e02ltb-3 gqlhzz"
        id="password"
        placeholder="Password"
        type="password"
        value="ttttt7777qqqq"
      />
      <button
        class="form__Submit-sc-1e02ltb-5 fvISnT"
        data-testid="form-submit"
        type="submit"
      >
        Sign Up
      </button>
    </form>
    <p
      class="form__TextBig-sc-1e02ltb-9 qOJIB"
    >
      Already a user?
       
      <a
        class="form__Link-sc-1e02ltb-10 ASZx"
        color="#fff"
        href="/login"
      >
        Sign in
      </a>
    </p>
  </div>
  <div
    class="footer__Container-sc-58hhi-0 gLeidq"
  >
    <div
      class="footer__Inner-sc-58hhi-1 hxpWbN"
    >
      <p
        class="footer__Title-sc-58hhi-2 iYvwUS"
      >
        Questions? Call 
        <a
          href="tel:8-800-100-9668"
        >
          8-800-100-9668
        </a>
      </p>
      <ul
        class="footer__Links-sc-58hhi-3 dVUMzK"
      >
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            FAQ
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Help Center
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Account
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Media Center
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Investor Relations
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Jobs
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Ways to Watch
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Terms of Use
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Privacy
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Cookie Preferences
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Corporate Information
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Contact Us
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Speed Test
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Legal Notices
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Netflix Originals
          </a>
        </li>
      </ul>
      <p
        class="footer__Text-sc-58hhi-5 eNZVhR"
      >
        Netflix Russia
      </p>
    </div>
  </div>
</div>
`;

exports[`<SignUp /> submit form return error 1`] = `
<div
  class="header__Background-sc-1qf3jwc-0 dEAuVS"
>
  <div
    class="header__Container-sc-1qf3jwc-1 iJrjfW"
  >
    <img
      alt="Netflix"
      class="header__Logo-sc-1qf3jwc-2 edGsUc"
      src="/images/misc/logo.svg"
    />
  </div>
  <div
    class="form__Container-sc-1e02ltb-0 dTbbCb"
  >
    <h1
      class="form__Title-sc-1e02ltb-2 kkeSEH"
    >
      Sign In
    </h1>
    <form
      class="form__Base-sc-1e02ltb-1 NkBbX"
    >
      <p
        class="form__Error-sc-1e02ltb-4 dprvGA"
        data-testid="form-error"
      >
        sign up reject
      </p>
      <input
        class="form__Input-sc-1e02ltb-3 gqlhzz"
        id="name"
        placeholder="Name"
        type="text"
        value="Bob"
      />
      <input
        class="form__Input-sc-1e02ltb-3 gqlhzz"
        id="email"
        placeholder="Email or phone number"
        type="text"
        value="gggrres@fffg.cc"
      />
      <input
        class="form__Input-sc-1e02ltb-3 gqlhzz"
        id="password"
        placeholder="Password"
        type="password"
        value="ttttt7777qqqq"
      />
      <button
        class="form__Submit-sc-1e02ltb-5 fvISnT"
        data-testid="form-submit"
        type="submit"
      >
        Sign Up
      </button>
    </form>
    <p
      class="form__TextBig-sc-1e02ltb-9 qOJIB"
    >
      Already a user?
       
      <a
        class="form__Link-sc-1e02ltb-10 ASZx"
        color="#fff"
        href="/login"
      >
        Sign in
      </a>
    </p>
  </div>
  <div
    class="footer__Container-sc-58hhi-0 gLeidq"
  >
    <div
      class="footer__Inner-sc-58hhi-1 hxpWbN"
    >
      <p
        class="footer__Title-sc-58hhi-2 iYvwUS"
      >
        Questions? Call 
        <a
          href="tel:8-800-100-9668"
        >
          8-800-100-9668
        </a>
      </p>
      <ul
        class="footer__Links-sc-58hhi-3 dVUMzK"
      >
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            FAQ
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Help Center
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Account
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Media Center
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Investor Relations
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Jobs
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Ways to Watch
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Terms of Use
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Privacy
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Cookie Preferences
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Corporate Information
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Contact Us
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Speed Test
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Legal Notices
          </a>
        </li>
        <li
          class="footer__Link-sc-58hhi-4 gBCxki"
        >
          <a
            href="#"
          >
            Netflix Originals
          </a>
        </li>
      </ul>
      <p
        class="footer__Text-sc-58hhi-5 eNZVhR"
      >
        Netflix Russia
      </p>
    </div>
  </div>
</div>
`;
